--- a/.github/workflows/update-servers.yml
+++ b/.github/workflows/update-servers.yml
@@ -5,12 +5,17 @@ on:
     - cron: "0 0 * * 0"   # weekly (Sunday 00:00 UTC)
   workflow_dispatch:       # manual trigger
 
+permissions:
+  contents: write   # allow push
+
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -24,10 +29,11 @@ jobs:
         run: node update-servers.js
 
       - name: Commit & Push changes
+        if: github.repository == 'RJRYT/samp'
         run: |
           if [[ `git status --porcelain` ]]; then
-            git config --global user.name "GitHub Action"
-            git config --global user.email "actions@github.com"
+            git config --global user.name "github-actions[bot]"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git add mobile/servers.json
             git commit -m "Auto-update servers.json"
             git push
