--- a/.github/workflows/update-servers.yml
+++ b/.github/workflows/update-servers.yml
@@ -1,8 +1,8 @@
 name: Update Server List
 
 on:
-  schedule:
-    - cron: "0 0 * * 0"   # weekly (Sunday 00:00 UTC)
+  #schedule:
+    #- cron: "0 0 * * 0"   # weekly (Sunday 00:00 UTC)
   workflow_dispatch:       # manual trigger
 
 permissions:
